Fix report dir missing

--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -2,8 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d24d7415-4599-402b-8381-8fd9d75020ba",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -25,8 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11b6e844-8c28-4884-b5a7-f8c56034d9a7",
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -35,7 +50,7 @@
     "\"\"\"\n",
     "parameters\n",
     "\"\"\"\n",
-    "dataset_title = 'ncar2048low'\n",
+    "dataset_title = 'stsabl2048low'\n",
     "store_path = f\"/home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/{dataset_title}/{dataset_title}.zarr\"\n",
     "store = DirectoryStore(store_path, dimension_separator = '/')\n",
     "# time offset from 0 when querying the dataset with giverny.\n",
@@ -69,17 +84,25 @@
     "# maximum number of retries in case of an error.\n",
     "max_retries = 10\n",
     "# output path for writing the report text file.\n",
-    "output_path = f'./reports/{dataset_title}/'"
+    "output_path = os.path.join('/home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/reports/', dataset_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08de6890-35b1-417c-be4b-9714fa17cef8",
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zarr store created.\n",
+      "-\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "create the zarr store\n",
@@ -109,15 +132,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb18562b-59f2-4da4-b7d9-7072c650e323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in self.location_paths:\n",
+    "    self.NCAR_files += glob.glob(os.path.join(path, f'*{self.file_extension}'))\n",
+    "\n",
+    "timestep = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "babd23622ef64234b9ccf18fa64bef75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='chunks completed'), FloatProgress(value=0.0, max=64.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2435f0e7d1ee41cb9fdb7404689ec0ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='time'), FloatProgress(value=0.0, max=20.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retrying (n = 8) time = 19                                                                          "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "read JHTDB datasets from fileDB using giverny and then write to a zarr store on ceph\n",
     "\"\"\"\n",
+    "import xarray as xr\n",
+    "\n",
     "# open the zarr store using DirectoryStore.\n",
     "root = zarr.open(store, mode = 'a')\n",
     "\n",
@@ -126,8 +198,51 @@
     "        \"\"\"\n",
     "        TODO : Ariel change code here for reading in the new NCAR data without giverny.\n",
     "        \"\"\"\n",
+    "        \n",
+    "        def select_file(file_list, timestep):\n",
+    "            for full_path in file_list:\n",
+    "                # Extract the filename from the full path\n",
+    "                filename = os.path.basename(full_path)\n",
+    "\n",
+    "                # Extract the number from the filename using a more specific regular expression\n",
+    "                match = re.search(r'jhd\\.(\\d+)\\.nc', filename)\n",
+    "                if match:\n",
+    "                    file_timestep = int(match.group(1))\n",
+    "                    if file_timestep == timestep:\n",
+    "                        return full_path\n",
+    "            # If no file is found, raise an exception\n",
+    "            raise FileNotFoundError(f\"No file found for timestep {timestep}\")\n",
+    "        \n",
+    "\n",
     "        # initialize dataset and open zarr store.\n",
-    "        dataset = turb_dataset(dataset_title = dataset_title, output_path = '', auth_token = '')\n",
+    "#         dataset = turb_dataset(dataset_title = dataset_title, output_path = '', auth_token = '')\n",
+    "        data_xr = xr.open_dataset(select_file(self.NCAR_files,timestep),\n",
+    "                                  chunks={'nnz': xyzt_filedb_file_dims[0], 'nny': xyzt_filedb_file_dims[1],\n",
+    "                                          'nnx': xyzt_filedb_file_dims[2]})\n",
+    "    \n",
+    "        assert isinstance(data_xr['e'].data, dask.array.core.Array)\n",
+    "\n",
+    "        self.array_cube_side = self._get_data_cube_side(data_xr)\n",
+    "\n",
+    "        # Add an extra dimension to the data to match isotropic8192 Drop is there to drop the Coordinates object\n",
+    "        # that is created - this creates a separate folder when to_zarr() is called\n",
+    "        expanded_ds = data_xr.expand_dims({'extra_dim': [1]}).drop_vars('extra_dim')\n",
+    "        # The above adds the extra dimension to the start. Fix that - put it in the back\n",
+    "        transposed_ds = expanded_ds.transpose('nnz', 'nny', 'nnx', 'extra_dim')\n",
+    "\n",
+    "        # Group 3 velocity components together\n",
+    "        # Never use dask with remote network location on this!!\n",
+    "        merged_velocity = write_utils.merge_velocities(transposed_ds, chunk_size_base=self.desired_zarr_chunk_size)\n",
+    "\n",
+    "        # TODO this is also hard-coded\n",
+    "        merged_velocity = merged_velocity.rename({'e': 'energy', 't': 'temperature', 'p': 'pressure'})\n",
+    "\n",
+    "        dims = [dim for dim in data_xr.dims]\n",
+    "        dims.reverse()  # use (nnz, nny, nnx) instead of (nnx, nny, nnz)\n",
+    "        \n",
+    "        dataset = data_xr\n",
+    "\n",
+    "        \n",
     "        x, y, z = [coord * xyzt_filedb_file_dims[index] + 1 for index, coord in enumerate(coords[:3])]\n",
     "        time = coords[3]\n",
     "        ranges = [[x, x + xyzt_filedb_file_dims[0] - 1],\n",
@@ -257,18 +372,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3836f1b6-8e19-496d-bd8d-f5bd41911eb2",
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./reports/stsabl2048low/'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "channel5200\t\t iso8192\t\t rotstrat4096\n",
+      "contour_temp-test.ipynb  isotropic1024coarse\t sabl2048high\n",
+      "giverny_transfer\t isotropic1024coarseSQL  sabl2048low\n",
+      "highspeed_bl\t\t isotropic1024fine\t stsabl2048low\n",
+      "iso32768\t\t isotropic8192\n",
+      "iso4096\t\t\t mixing\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9 (py39)",
+   "display_name": "Python 3.8 (py38)",
    "language": "python",
-   "name": "py39"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -280,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
