Did lots of fixes, now says getCutout() is not defined

--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "NCAR_JHF_BASE_PATH = '/home/idies/workspace/turbulence-ceph-staging/ncar-jhf'\n",
+    "\n",
+    "NCAR_JHF_HR_PATH = os.path.join(NCAR_JHF_BASE_PATH, 'hr')\n",
+    "NCAR_JHF_LR_PATH = os.path.join(NCAR_JHF_BASE_PATH, 'lr')\n",
+    "\n",
+    "NCAR_FILES_EXTENSION = '.nc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -41,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -131,14 +147,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for path in self.location_paths:\n",
-    "    self.NCAR_files += glob.glob(os.path.join(path, f'*{self.file_extension}'))\n",
+    "import dask.array as da\n",
     "\n",
-    "timestep = 1"
+    "def merge_velocities(transposed_ds, chunk_size_base=64):\n",
+    "    \"\"\"\n",
+    "        Merge the 3 velocity components/directions - such merging\n",
+    "        exhibits faster 3-component reads. This is a Dask lazy\n",
+    "         computation\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Merge Velocities into 1\n",
+    "    b = da.stack([transposed_ds['u'], transposed_ds['v'], transposed_ds['w']], axis=3)\n",
+    "    b = b.squeeze()  # It should be (2048, 2048, 2048, 3, 1) before this. Use (2048, 2048, 2048, 3)\n",
+    "    # Make into correct chunk sizes\n",
+    "    b = b.rechunk((chunk_size_base, chunk_size_base, chunk_size_base, 3))  # Dask chooses (64,64,64,1)\n",
+    "    result = transposed_ds.drop_vars(['u', 'v', 'w'])  # Drop individual velocities\n",
+    "\n",
+    "    # Add joined velocity to original group\n",
+    "    # Can't make the dim name same as scalars\n",
+    "    result['velocity'] = xr.DataArray(b, dims=(\n",
+    "        'nnz', 'nny', 'nnx', 'velocity component (xyz)'))\n",
+    "\n",
+    "    return result"
    ]
   },
   {
@@ -151,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "babd23622ef64234b9ccf18fa64bef75",
+       "model_id": "558f82b4ce45475ca8a8ba8499b14d31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2435f0e7d1ee41cb9fdb7404689ec0ff",
+       "model_id": "8cf88fab98d2422abad51dd2c6b2672a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,13 +209,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrying (n = 8) time = 19                                                                          "
-     ]
     }
    ],
    "source": [
@@ -189,6 +216,8 @@
     "read JHTDB datasets from fileDB using giverny and then write to a zarr store on ceph\n",
     "\"\"\"\n",
     "import xarray as xr\n",
+    "import traceback\n",
+    "import dask\n",
     "\n",
     "# open the zarr store using DirectoryStore.\n",
     "root = zarr.open(store, mode = 'a')\n",
@@ -199,50 +228,29 @@
     "        TODO : Ariel change code here for reading in the new NCAR data without giverny.\n",
     "        \"\"\"\n",
     "        \n",
-    "        def select_file(file_list, timestep):\n",
-    "            for full_path in file_list:\n",
-    "                # Extract the filename from the full path\n",
-    "                filename = os.path.basename(full_path)\n",
-    "\n",
-    "                # Extract the number from the filename using a more specific regular expression\n",
-    "                match = re.search(r'jhd\\.(\\d+)\\.nc', filename)\n",
-    "                if match:\n",
-    "                    file_timestep = int(match.group(1))\n",
-    "                    if file_timestep == timestep:\n",
-    "                        return full_path\n",
-    "            # If no file is found, raise an exception\n",
-    "            raise FileNotFoundError(f\"No file found for timestep {timestep}\")\n",
-    "        \n",
-    "\n",
-    "        # initialize dataset and open zarr store.\n",
-    "#         dataset = turb_dataset(dataset_title = dataset_title, output_path = '', auth_token = '')\n",
-    "        data_xr = xr.open_dataset(select_file(self.NCAR_files,timestep),\n",
+    "        # Initialize dataset and open zarr store.\n",
+    "        data_xr = xr.open_dataset(os.path.join(NCAR_JHF_LR_PATH, 'jhf.000.nc'),\n",
     "                                  chunks={'nnz': xyzt_filedb_file_dims[0], 'nny': xyzt_filedb_file_dims[1],\n",
     "                                          'nnx': xyzt_filedb_file_dims[2]})\n",
     "    \n",
     "        assert isinstance(data_xr['e'].data, dask.array.core.Array)\n",
     "\n",
-    "        self.array_cube_side = self._get_data_cube_side(data_xr)\n",
-    "\n",
-    "        # Add an extra dimension to the data to match isotropic8192 Drop is there to drop the Coordinates object\n",
-    "        # that is created - this creates a separate folder when to_zarr() is called\n",
+    "        # Add an extra dimension to the data to match isotropic8192\n",
     "        expanded_ds = data_xr.expand_dims({'extra_dim': [1]}).drop_vars('extra_dim')\n",
-    "        # The above adds the extra dimension to the start. Fix that - put it in the back\n",
+    "        # Put the extra dimension in the back\n",
     "        transposed_ds = expanded_ds.transpose('nnz', 'nny', 'nnx', 'extra_dim')\n",
     "\n",
     "        # Group 3 velocity components together\n",
-    "        # Never use dask with remote network location on this!!\n",
-    "        merged_velocity = write_utils.merge_velocities(transposed_ds, chunk_size_base=self.desired_zarr_chunk_size)\n",
+    "        merged_velocity = merge_velocities(transposed_ds, chunk_size_base=xyzt_chunk_sizes[0])\n",
     "\n",
-    "        # TODO this is also hard-coded\n",
+    "        # Rename variables\n",
     "        merged_velocity = merged_velocity.rename({'e': 'energy', 't': 'temperature', 'p': 'pressure'})\n",
     "\n",
     "        dims = [dim for dim in data_xr.dims]\n",
-    "        dims.reverse()  # use (nnz, nny, nnx) instead of (nnx, nny, nnz)\n",
+    "        dims.reverse()  # Use (nnz, nny, nnx) instead of (nnx, nny, nnz)\n",
     "        \n",
     "        dataset = data_xr\n",
     "\n",
-    "        \n",
     "        x, y, z = [coord * xyzt_filedb_file_dims[index] + 1 for index, coord in enumerate(coords[:3])]\n",
     "        time = coords[3]\n",
     "        ranges = [[x, x + xyzt_filedb_file_dims[0] - 1],\n",
@@ -251,7 +259,7 @@
     "            \n",
     "        variable_data = []\n",
     "        for zarr_variable in zarr_variables:\n",
-    "            variable_data.append(getCutout(dataset, zarr_variable, time + time_offset, np.array(ranges), np.array(strides), verbose = False).to_array().to_numpy()[0])\n",
+    "            variable_data.append(getCutout(dataset, zarr_variable, time + time_offset, np.array(ranges), np.array(strides), verbose=False).to_array().to_numpy()[0])\n",
     "            \n",
     "        \"\"\"\n",
     "        TODO : End of code for reading in data.\n",
@@ -270,16 +278,15 @@
     "                                            x - 1 : x + xyzt_filedb_file_dims[0] - 1, :]\n",
     "            \n",
     "            if np.all(giverny_cube == ceph_cube):\n",
-    "                return f\"valid copy\"\n",
+    "                return \"valid copy\"\n",
     "            else:\n",
-    "                return f\"corrupt copy\"\n",
+    "                return \"corrupt copy\"\n",
     "\n",
-    "        # save the variables in parallel.\n",
+    "        # Save the variables in parallel.\n",
     "        with ThreadPoolExecutor(num_variables) as p:\n",
     "            list(p.map(save_store, variable_data, zarr_variables))\n",
     "            \n",
-    "        # verify that the copies are not corrupt.\n",
-    "        verified = []\n",
+    "        # Verify that the copies are not corrupt.\n",
     "        with ThreadPoolExecutor(num_variables) as p:\n",
     "            verified = list(p.map(verify_copy, variable_data, zarr_variables))\n",
     "\n",
@@ -288,145 +295,89 @@
     "        else:\n",
     "            return f\"successfully processed cube at {coords}\"\n",
     "    except Exception as e:\n",
-    "        raise Exception(f\"error processing cube at {coords}: {type(e)}, {str(e)}\")\n",
+    "        tb = traceback.format_exc()\n",
+    "        raise Exception(f\"error processing cube at {coords}: {type(e).__name__}, {e}\\n{tb}\")\n",
     "        \n",
-    "# Create a context manager to suppress stderr\n",
-    "@contextlib.contextmanager\n",
-    "def suppress_stderr():\n",
-    "    with open(os.devnull, 'w') as devnull:\n",
-    "        with contextlib.redirect_stderr(devnull):\n",
-    "            yield\n",
+    "# Commented out the suppress_stderr context manager\n",
+    "# @contextlib.contextmanager\n",
+    "# def suppress_stderr():\n",
+    "#     with open(os.devnull, 'w') as devnull:\n",
+    "#         with contextlib.redirect_stderr(devnull):\n",
+    "#             yield\n",
     "\n",
-    "# write the report file.\n",
+    "# Write the report file.\n",
     "if not os.path.exists(output_path):\n",
     "    os.mkdir(output_path)\n",
     "    \n",
-    "# process cubes in parallel.\n",
+    "# Process cubes in parallel.\n",
     "cube_coords = list(itertools.product(*[range(dim // chunk) for dim, chunk in zip(xyzt_dims[:3], xyzt_filedb_file_dims[:3])]))\n",
     "    \n",
-    "current_time_pbar = tqdm(total = len(cube_coords), desc = \"chunks completed\", leave = False)\n",
+    "current_time_pbar = tqdm(total=len(cube_coords), desc=\"chunks completed\", leave=False)\n",
     "    \n",
-    "with open(output_path + f\"{dataset_title}_report-success.txt\", \"w\") as f_success:\n",
-    "    with open(output_path + f\"{dataset_title}_report-error.txt\", \"w\") as f_error:\n",
-    "        for time in tqdm(range(xyzt_dims[-1]), total = len(range(xyzt_dims[-1])), desc = \"time\"):\n",
+    "with open(os.path.join(output_path, f\"{dataset_title}_report-success.txt\"), \"w\") as f_success:\n",
+    "    with open(os.path.join(output_path, f\"{dataset_title}_report-error.txt\"), \"w\") as f_error:\n",
+    "        for time in tqdm(range(xyzt_dims[-1]), total=xyzt_dims[-1], desc=\"time\"):\n",
     "            correct_flag = False\n",
     "            retries = 0\n",
     "            while not correct_flag and retries <= max_retries:\n",
     "                retries += 1\n",
     "                \n",
-    "                # update cube_coords with the time.\n",
+    "                # Update cube_coords with the time.\n",
     "                cube_coords_time = [(x, y, z, time) for x, y, z in cube_coords]\n",
     "                \n",
     "                results = []\n",
     "                try:\n",
     "                    with ProcessPoolExecutor(num_workers) as executor:\n",
-    "                        with suppress_stderr():\n",
-    "                            for result in executor.map(process_cube, cube_coords_time):\n",
-    "                                results.append(result)\n",
-    "                                current_time_pbar.update(1)\n",
-    "                                \n",
-    "                                if \"error processing cube\" in result:\n",
-    "                                    break\n",
+    "                        # Removed suppress_stderr()\n",
+    "                        for result in executor.map(process_cube, cube_coords_time):\n",
+    "                            results.append(result)\n",
+    "                            current_time_pbar.update(1)\n",
+    "                            \n",
+    "                            if \"error processing cube\" in result:\n",
+    "                                break\n",
     "                    \n",
-    "                    # reset the chunk progress bar.\n",
+    "                    # Reset the chunk progress bar.\n",
     "                    current_time_pbar.reset()\n",
     "                    \n",
-    "                    print('\\r' + ' ' * 100 + '\\r', end = '', flush = True)\n",
+    "                    print('\\r' + ' ' * 100 + '\\r', end='', flush=True)\n",
     "                    if any([\"error processing cube\" in message for message in results]) or results == []:\n",
     "                        if retries > max_retries:\n",
     "                            output_str = f\"error consolidating data for time = {time}\\n\"\n",
     "                            f_error.write(output_str)\n",
     "                            f_error.flush()\n",
     "\n",
-    "                            print(f\"\\rerror consolidating data for time = {time}\", end = '')\n",
+    "                            print(f\"\\rerror consolidating data for time = {time}\", end='')\n",
     "                        else:\n",
-    "                            print(f\"\\rretrying (n = {retries}) time = {time}\", end = '')\n",
+    "                            print(f\"\\rretrying (n = {retries}) time = {time}\", end='')\n",
     "                            continue\n",
     "                    else:\n",
     "                        output_str = f\"successfully consolidated data for time = {time}\\n\"\n",
     "                        f_success.write(output_str)\n",
     "                        f_success.flush()\n",
     "\n",
-    "                        print(f\"\\rsuccessfully consolidated data for time = {time}\", end = '')\n",
+    "                        print(f\"\\rsuccessfully consolidated data for time = {time}\", end='')\n",
     "\n",
     "                        correct_flag = True\n",
-    "                except:\n",
-    "                    print('\\r' + ' ' * 100 + '\\r', end = '', flush = True)\n",
+    "                except Exception as e:\n",
+    "                    tb = traceback.format_exc()\n",
+    "                    print('\\r' + ' ' * 100 + '\\r', end='', flush=True)\n",
     "                    \n",
-    "                    # reset the chunk progress bar.\n",
+    "                    # Reset the chunk progress bar.\n",
     "                    current_time_pbar.reset()\n",
     "                    \n",
-    "                    if retries > max_retries:\n",
-    "                        output_str = f\"code exception when consolidating data for time = {time}\\n\"\n",
-    "                        f_error.write(output_str)\n",
-    "                        f_error.flush()\n",
+    "                    error_message = f\"code exception when consolidating data for time = {time}: {type(e).__name__}, {e}\\n{tb}\\n\"\n",
+    "                    f_error.write(error_message)\n",
+    "                    f_error.flush()\n",
     "\n",
-    "                        print(f\"\\rcode exception when consolidating data for time = {time}\", end = '')\n",
+    "                    print(f\"\\rcode exception when consolidating data for time = {time}: {e}\", end='')\n",
+    "                    if retries > max_retries:\n",
+    "                        break\n",
     "                    else:\n",
-    "                        print(f\"\\rretrying (n = {retries}) time = {time}\", end = '')\n",
+    "                        print(f\"\\rretrying (n = {retries}) time = {time}\", end='')\n",
     "                        continue\n",
     "\n",
     "print('\\n-')\n",
     "print(\"completed zarr consolidation, check report files\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./reports/stsabl2048low/'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel5200\t\t iso8192\t\t rotstrat4096\n",
-      "contour_temp-test.ipynb  isotropic1024coarse\t sabl2048high\n",
-      "giverny_transfer\t isotropic1024coarseSQL  sabl2048low\n",
-      "highspeed_bl\t\t isotropic1024fine\t stsabl2048low\n",
-      "iso32768\t\t isotropic8192\n",
-      "iso4096\t\t\t mixing\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls"
    ]
   }
  ],
