--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -747,6 +747,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "successfully consolidated data for time = 8                                                         "
+     ]
     }
    ],
    "source": [
@@ -782,9 +789,9 @@
     "\n",
     "        # Chunk sizes for each dimension\n",
     "        chunk_sizes = {\n",
-    "            'nnx': xyzt_filedb_file_dims[0],\n",
+    "            'nnx': xyzt_filedb_file_dims[2],\n",
     "            'nny': xyzt_filedb_file_dims[1],\n",
-    "            'nnz': xyzt_filedb_file_dims[2],\n",
+    "            'nnz': xyzt_filedb_file_dims[0],\n",
     "        }\n",
     "\n",
     "        # Construct the selection dictionary\n",
