--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -154,8 +154,7 @@
    "source": [
     "# xyz and time chunk sizes for the zarr store on ceph.\n",
     "xyzt_chunk_sizes = [64, 64, 64, 1]\n",
-    "# xyz and time dimensions to query in parallel when reading from the legacy stores.\n",
-    "xyzt_filedb_file_dims = np.array([512, 512, 512, 1])\n",
+    "\n",
     "# use the default stride value of 1 for each axis when using giverny to retrieve a cutout of the data.\n",
     "strides = [1, 1, 1]\n",
     "# map the zarr group variables to the number of values stored for each grid point.\n",
@@ -205,23 +204,23 @@
     "def create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups):\n",
     "    dt = np.dtype(np.float32)\n",
     "    dt = dt.newbyteorder('<')\n",
-    "    \n",
+    "\n",
     "    # create the zarr store.\n",
     "    root = zarr.group(store = store, overwrite = True, synchronizer = None)\n",
-    "    \n",
+    "\n",
     "    # create the zarr group for each variable.\n",
     "    for variable_name in zarr_groups:\n",
     "        zarr_dims = zarr_groups[variable_name]\n",
-    "        \n",
-    "        zarr_group = root.zeros(variable_name, shape = (xyzt_dims_full[3], xyzt_dims_full[2], xyzt_dims_full[1], xyzt_dims_full[0], zarr_dims), \n",
-    "                                chunks = (xyzt_chunk_sizes[3], xyzt_chunk_sizes[2], xyzt_chunk_sizes[1], xyzt_chunk_sizes[0], zarr_dims), \n",
+    "\n",
+    "        zarr_group = root.zeros(variable_name, shape = (xyzt_dims_full[3], xyzt_dims_full[2], xyzt_dims_full[1], xyzt_dims_full[0], zarr_dims),\n",
+    "                                chunks = (xyzt_chunk_sizes[3], xyzt_chunk_sizes[2], xyzt_chunk_sizes[1], xyzt_chunk_sizes[0], zarr_dims),\n",
     "                                dtype = dt, compressor = None)\n",
-    "    \n",
+    "\n",
     "    print('zarr store created.')\n",
     "    print('-')\n",
     "    sys.stdout.flush()\n",
     "\n",
-    "    \n",
+    "\n",
     "def confirm_overwrite():\n",
     "    while True:\n",
     "        response = input(\"Are you sure you want to overwrite everything? (y/n): \").strip().lower()\n",
@@ -316,7 +315,7 @@
     "def select_file(folder_path, timestep, file_acronym='jhf'):\n",
     "    file_list = os.listdir(folder_path)\n",
     "\n",
-    "    for filename in file_list:   \n",
+    "    for filename in file_list:\n",
     "        # Extract the number from the filename using a more specific regular expression\n",
     "        match = re.search(file_acronym+r'\\.(\\d+)\\.nc', filename)\n",
     "        if match:\n",
@@ -392,26 +391,26 @@
     "        \"\"\"\n",
     "        TODO : Ariel change code here for reading in the new NCAR data without giverny.\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        # Initialize dataset and open zarr store.\n",
     "        # TODO Need to replace the hard-coded file with timestep-based filename\n",
     "        timestep = coords[3]\n",
     "        # print(\"full filepath: \", select_file(NCAR_JHF_LR_PATH, timestep))\n",
     "        data_xr = xr.open_dataset(select_file(NCAR_JHF_LR_PATH, timestep),\n",
-    "                                  chunks={'nnz': xyzt_filedb_file_dims[2],\n",
-    "                                          'nny': xyzt_filedb_file_dims[1],\n",
-    "                                          'nnx': xyzt_filedb_file_dims[0]})\n",
-    "    \n",
+    "                                  chunks={'nnz': xyzt_chunk_sizes[2],\n",
+    "                                          'nny': xyzt_chunk_sizes[1],\n",
+    "                                          'nnx': xyzt_chunk_sizes[0]})\n",
+    "\n",
     "        assert isinstance(data_xr['e'].data, dask.array.core.Array)\n",
-    "        \n",
+    "\n",
     "                # Unpack cube coordinates\n",
     "        i, j, k = coords[:3]  # i: X-index, j: Y-index, k: Z-index\n",
     "\n",
     "        # Chunk sizes for each dimension\n",
     "        chunk_sizes = {\n",
-    "            'nnx': xyzt_filedb_file_dims[0],\n",
-    "            'nny': xyzt_filedb_file_dims[1],\n",
-    "            'nnz': xyzt_filedb_file_dims[2],\n",
+    "            'nnx': xyzt_chunk_sizes[0],\n",
+    "            'nny': xyzt_chunk_sizes[1],\n",
+    "            'nnz': xyzt_chunk_sizes[2],\n",
     "        }\n",
     "\n",
     "        # Construct the selection dictionary\n",
@@ -420,10 +419,10 @@
     "            'nny': slice(j * chunk_sizes['nny'], (j + 1) * chunk_sizes['nny']),\n",
     "            'nnx': slice(i * chunk_sizes['nnx'], (i + 1) * chunk_sizes['nnx']),\n",
     "        }\n",
-    "        \n",
+    "\n",
     "        # 512-subcube to manage memory constraints\n",
     "        data_subcube = data_xr.isel(selection)\n",
-    "        \n",
+    "\n",
     "        # Group 3 velocity components together\n",
     "        merged_velocity = merge_velocities(data_subcube, chunk_size_base=xyzt_chunk_sizes[0])\n",
     "\n",
@@ -432,24 +431,24 @@
     "            merged_velocity[v] = merged_velocity[v].expand_dims({'extra_dim': [1]}).drop_vars('extra_dim')\n",
     "            # Put the extra dimension in the back\n",
     "            merged_velocity[v] = merged_velocity[v].transpose('nnz', 'nny', 'nnx', 'extra_dim')\n",
-    "        \n",
+    "\n",
     "\n",
     "        # Rename variables\n",
     "        merged_velocity = merged_velocity.rename({'e': 'energy', 't': 'temperature', 'p': 'pressure'})\n",
-    "        \n",
+    "\n",
     "        dataset = merged_velocity\n",
     "\n",
-    "        x, y, z = [coord * xyzt_filedb_file_dims[index] + 1 for index, coord in enumerate(coords[:3])]\n",
+    "        x, y, z = [coord * xyzt_chunk_sizes[index] + 1 for index, coord in enumerate(coords[:3])]\n",
     "        time = coords[3]\n",
-    "        ranges = [[x, x + xyzt_filedb_file_dims[0] - 1],\n",
-    "                  [y, y + xyzt_filedb_file_dims[1] - 1],\n",
-    "                  [z, z + xyzt_filedb_file_dims[2] - 1]]\n",
-    "        \n",
-    "        \n",
+    "        ranges = [[x, x + xyzt_chunk_sizes[0] - 1],\n",
+    "                  [y, y + xyzt_chunk_sizes[1] - 1],\n",
+    "                  [z, z + xyzt_chunk_sizes[2] - 1]]\n",
+    "\n",
+    "\n",
     "\n",
     "        # Needed for Mike's getCutout below\n",
     "        # dataset.attrs['dataset_title'] = dataset_title\n",
-    "            \n",
+    "\n",
     "        variable_data = []\n",
     "        for zarr_variable in zarr_variables:\n",
     "            variable_data.append(dataset[zarr_variable].values)\n",
@@ -457,23 +456,23 @@
     "            # data_array = np.expand_dims(data_array, axis=0)  # Adds time dimension at axis 0\n",
     "            # variable_data.append(data_array)\n",
     "\n",
-    "            \n",
+    "\n",
     "        \"\"\"\n",
     "        TODO : End of code for reading in data.\n",
     "        \"\"\"\n",
     "\n",
     "        def save_store(giverny_cube, variable_name):\n",
     "            root[variable_name][time + time_ceph_offset,\n",
-    "                                z - 1 : z + xyzt_filedb_file_dims[2] - 1,\n",
-    "                                y - 1 : y + xyzt_filedb_file_dims[1] - 1,\n",
-    "                                x - 1 : x + xyzt_filedb_file_dims[0] - 1, :] = giverny_cube\n",
-    "            \n",
+    "                                z - 1 : z + xyzt_chunk_sizes[2] - 1,\n",
+    "                                y - 1 : y + xyzt_chunk_sizes[1] - 1,\n",
+    "                                x - 1 : x + xyzt_chunk_sizes[0] - 1, :] = giverny_cube\n",
+    "\n",
     "        def verify_copy(giverny_cube, variable_name):\n",
     "            ceph_cube = root[variable_name][time + time_ceph_offset,\n",
-    "                                            z - 1 : z + xyzt_filedb_file_dims[2] - 1,\n",
-    "                                            y - 1 : y + xyzt_filedb_file_dims[1] - 1,\n",
-    "                                            x - 1 : x + xyzt_filedb_file_dims[0] - 1, :]\n",
-    "            \n",
+    "                                            z - 1 : z + xyzt_chunk_sizes[2] - 1,\n",
+    "                                            y - 1 : y + xyzt_chunk_sizes[1] - 1,\n",
+    "                                            x - 1 : x + xyzt_chunk_sizes[0] - 1, :]\n",
+    "\n",
     "            if np.all(giverny_cube == ceph_cube):\n",
     "                return \"valid copy\"\n",
     "            else:\n",
@@ -482,7 +481,7 @@
     "        # Save the variables in parallel.\n",
     "        with ThreadPoolExecutor(num_variables) as p:\n",
     "            list(p.map(save_store, variable_data, zarr_variables))\n",
-    "            \n",
+    "\n",
     "        # TODO Ariel Disable verification in favor of manual verification\n",
     "        # # Verify that the copies are not corrupt.\n",
     "        # with ThreadPoolExecutor(num_variables) as p:\n",
@@ -495,7 +494,7 @@
     "    except Exception as e:\n",
     "        tb = traceback.format_exc()\n",
     "        raise Exception(f\"error processing cube at {coords}: {type(e).__name__}, {e}\\n{tb}\")\n",
-    "        \n",
+    "\n",
     "# Commented out the suppress_stderr context manager\n",
     "# @contextlib.contextmanager\n",
     "# def suppress_stderr():\n",
@@ -506,12 +505,12 @@
     "# Write the report file.\n",
     "if not os.path.exists(output_path):\n",
     "    os.mkdir(output_path)\n",
-    "    \n",
+    "\n",
     "# Process cubes in parallel.\n",
-    "cube_coords = list(itertools.product(*[range(dim // chunk) for dim, chunk in zip(xyzt_dims[:3], xyzt_filedb_file_dims[:3])]))\n",
-    "    \n",
+    "cube_coords = list(itertools.product(*[range(dim // chunk) for dim, chunk in zip(xyzt_dims[:3], xyzt_chunk_sizes[:3])]))\n",
+    "\n",
     "current_time_pbar = tqdm(total=len(cube_coords), desc=\"chunks completed\", leave=False)\n",
-    "    \n",
+    "\n",
     "with open(os.path.join(output_path, f\"{dataset_title}_report-success.txt\"), \"w\") as f_success:\n",
     "    with open(os.path.join(output_path, f\"{dataset_title}_report-error.txt\"), \"w\") as f_error:\n",
     "        for time in tqdm(range(xyzt_dims[-1]), total=xyzt_dims[-1], desc=\"time\"):\n",
@@ -519,10 +518,10 @@
     "            retries = 0\n",
     "            while not correct_flag and retries <= max_retries:\n",
     "                retries += 1\n",
-    "                \n",
+    "\n",
     "                # Update cube_coords with the time.\n",
     "                cube_coords_time = [(x, y, z, time) for x, y, z in cube_coords]\n",
-    "                \n",
+    "\n",
     "                results = []\n",
     "                try:\n",
     "                    with ProcessPoolExecutor(num_workers) as executor:\n",
@@ -530,13 +529,13 @@
     "                        for result in executor.map(process_cube, cube_coords_time):\n",
     "                            results.append(result)\n",
     "                            current_time_pbar.update(1)\n",
-    "                            \n",
+    "\n",
     "                            if \"error processing cube\" in result:\n",
     "                                break\n",
-    "                    \n",
+    "\n",
     "                    # Reset the chunk progress bar.\n",
     "                    current_time_pbar.reset()\n",
-    "                    \n",
+    "\n",
     "                    print('\\r' + ' ' * 100 + '\\r', end='', flush=True)\n",
     "                    if any([\"error processing cube\" in message for message in results]) or results == []:\n",
     "                        if retries > max_retries:\n",
@@ -559,10 +558,10 @@
     "                except Exception as e:\n",
     "                    tb = traceback.format_exc()\n",
     "                    print('\\r' + ' ' * 100 + '\\r', end='', flush=True)\n",
-    "                    \n",
+    "\n",
     "                    # Reset the chunk progress bar.\n",
     "                    current_time_pbar.reset()\n",
-    "                    \n",
+    "\n",
     "                    error_message = f\"code exception when consolidating data for time = {time}: {type(e).__name__}, {e}\\n{tb}\\n\"\n",
     "                    f_error.write(error_message)\n",
     "                    f_error.flush()\n",
@@ -595,7 +594,7 @@
     "#                                   chunks={'nnz': xyzt_filedb_file_dims[2],\n",
     "#                                           'nny': xyzt_filedb_file_dims[1],\n",
     "#                                           'nnx': xyzt_filedb_file_dims[0]})\n",
-    "    \n",
+    "\n",
     "# assert isinstance(data_xr['e'].data, dask.array.core.Array)\n",
     "\n",
     "#         # Unpack cube coordinates\n",
@@ -650,16 +649,6 @@
     "#     # data_array = dataset[zarr_variable].values\n",
     "#     # data_array = np.expand_dims(data_array, axis=0)  # Adds time dimension at axis 0\n",
     "#     # variable_data.append(data_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1042f6a4-bd6e-4e7c-b35d-77e5fe7743a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variable_data"
    ]
   },
   {
